--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
     "name": "Bulk Image Downloader",
     "description": "Download every image on a web page",
     "version": "0.1",
+    "browser_action": {
+        "default_popup": "popup/index.html"
+    },
     "background": {
         "scripts": ["background.js"]
     },
