--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,16 @@
     "name": "Bulk Image Downloader",
     "description": "Download every image on a web page",
     "version": "0.1",
+    "permissions": ["<all_urls>"],
     "browser_action": {
         "default_popup": "popup/index.html"
     },
     "background": {
-        "scripts": ["background.js"]
+        "scripts": ["jquery-3.4.1.min.js", "background.js"]
     },
     "content_scripts": [{
-        "matches": ["*://www.google.com/*"],
-        "js": ["content.js"]
+        "matches": ["<all_urls>"],
+        "js": ["jquery-3.4.1.min.js", "content.js"]
     }],
     "manifest_version": 2
 }
